<resources>
    <string name="app_name">Tienda Control</string>
    <string name="registration_title">Registro de usuarios</string>
    <string name="name_hint">Nombre Empresa</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="register_button_text">Registro</string>
    <string name="login_button_text">Login</string>
    <string name="messages_title">Mensajes con Firestore</string>
    <string name="enter_message_hint">Ingrese su mensaje</string>
    <string name="send_button_text">Enviar mensaje</string>
    <string name="login_title">Bienvenido a Tienda Control</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="register_button">¿No tienes cuenta Registrate?</string>
    <string name="recuperar_button">¿Recuperar Contraseña?</string>
    <string name="home_view_title">Vista del Home</string>
    <string name="firebase_examples_title">Ejemplos Firebase</string>
    <string name="firestore_button">Firestore</string>
    <string name="guardar">Guardar Predeterminado</string>
    <string name="Edicion">Administra</string>
    <string name="hint_Producto">Nombre Items:</string>
    <string name="hint_Valor">Valor:</string>
    <string name="hint_Detalles">Detalles:</string>
    <string name="hint_Cantidad">Cantidad:</string>
    <string name="registrar">Nuevo Ingreso</string>
    <string name="registrar2">Nuevo Egreso</string>
    <string name="fecha">Fecha:</string>
    //menu
    <string name="uno">Exportar Datos</string>
    <string name="dos">Ingreso</string>
    <string name="tres">Egreso</string>
    <string name="cuatro">Salir</string>
    <string name="quinto">Mis Bases Datos</string>
    <string name="sexto">Tienda Control</string>
    <string name="Septimo">Importar Datos</string>
    <string name="octavo">Exportar Exel</string>
    <string name="decimo">Atras</string>
    <string name="once">Modifica PIN</string>
    <string name="doce">Buscar</string>
    <string name="trece">Contabilidad</string>
    <string name="catorce">Nosotros</string>


    <string name="recordatorio">¿recordatorio?</string>
    <string name="database">Nueva base de datos</string>

    <string-array name="spinner_options">
        <item>Todos</item>
        <item>Positivos</item>
        <item>Negativos</item>
    </string-array>

    <!-- Cadenas para el menú -->

    <string name="inicio">Inicio</string>
    <string name="code">Código</string>
    <string name="dona">Donar</string>
    <string name="salir">Salir</string>

    <string-array name="filtro_opciones">
        <item>Día</item>
        <item>Semana</item>
        <item>Mes</item>
        <item>Año</item>
        <item>Fechas</item>
    </string-array>

    <style name="SpinnerPersonalisado" parent="Widget.AppCompat.Spinner">
        <item name="android:textSize">35sp</item>  <!-- Ajusta el tamaño aquí -->
    </style>


        <string-array name="frecuencias">
            <item>Diario</item>
            <item>Semanal</item>
            <item>Mensual</item>
        </string-array>






</resources>