<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/BaseDatos"
        android:orderInCategory="100"
        android:title="@string/sexto"
        app:showAsAction="never" />



    <item
        android:id="@+id/nueva_venta"
        android:orderInCategory="100"
        android:title="@string/dos"
        app:showAsAction="never" />
    <item
        android:id="@+id/nuevo_gasto"
        android:orderInCategory="100"
        android:title="@string/tres"
        app:showAsAction="never" />
    <item
        android:id="@+id/perfil_usuario"
        android:orderInCategory="100"
        android:title="@string/quinto"
        app:showAsAction="never" />
    <item
        android:id="@+id/exportar_exel"
        android:orderInCategory="100"
        android:title="@string/octavo"
        app:showAsAction="never" />
    <item
        android:id="@+id/exportar_db"
        android:orderInCategory="100"
        android:title="@string/uno"
        app:showAsAction="never" />
    <item
        android:id="@+id/inportar_db"
        android:orderInCategory="100"
        android:title="@string/Septimo"
        app:showAsAction="never" />

    <item
        android:id="@+id/salir"
        android:orderInCategory="100"
        android:title="@string/cuatro"
        app:showAsAction="never" />

</menu>