<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/texGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:background="@drawable/selector_background"
                android:text="@string/registrar2" />
            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Spinner
                android:id="@+id/spinnerPredefined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="30dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />
            <TextView
                android:id="@+id/viewValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hint_Valor" />

            <EditText
                android:id="@+id/editValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:gravity="center"
                android:labelFor="@+id/viewCantidad"
                android:textSize="50sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/viewProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hint_Producto" />

            <EditText
                android:id="@+id/editProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="text"
                android:labelFor="@+id/viewProducto"
                android:textSize="18sp" />



            <TextView
                android:id="@+id/viewDetalles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hint_Detalles" />

            <EditText
                android:id="@+id/editDetalles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="text"
                android:labelFor="@+id/viewDetalles"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/viewCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hint_Cantidad" />

            <EditText
                android:id="@+id/editCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:labelFor="@+id/viewCantidad"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />


                <TextView
                    android:id="@+id/texGuardarPredefinido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/selector_background"
                    android:text="@string/guardar"
                    android:textStyle="bold"/>

            <TextView
                android:id="@+id/texEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:textSize="18sp"
                android:text="Eliminar el Items Guardado" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>