<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardview="http://schemas.android.com/tools"
    android:id="@+id/root_layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            cardview:cardCornerRadius="50dp"
            cardview:cardElevation="3dp">

            <LinearLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <Spinner
                    android:id="@+id/spinnerPredefined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="30dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/viewValor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hint_Valor" />

                <EditText
                    android:id="@+id/txtValor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:labelFor="@+id/viewCantidad"
                    android:textSize="70sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/texGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/selector_background"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:text="@string/registrar"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/viewProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hint_Producto" />

                <EditText
                    android:id="@+id/txtProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="text"
                    android:labelFor="@+id/viewProducto"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/viewDetalles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hint_Detalles" />

                <EditText
                    android:id="@+id/txtDetalles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="text"
                    android:labelFor="@+id/viewDetalles"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/viewCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hint_Cantidad" />

                <EditText
                    android:id="@+id/txtCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:labelFor="@+id/viewCantidad"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/texGuardarPredefinido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/guardar" />

                <TextView
                    android:id="@+id/texEliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="Eliminar el Items Guardado"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</RelativeLayout>
