<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/fondo"
    tools:context=".login.Register"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/iconopng"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="20dp"
        android:text="@string/login_title"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:theme="@style/Theme.MaterialComponents"
        app:layout_constraintWidth_percent="0.9">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextName"
                android:layout_marginTop="16dp"
                android:hint="@string/email_hint" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEmail"
                android:layout_marginTop="16dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />



            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/Buton"
                android:gravity="center"
                android:text="@string/register_button" />


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#002196F3"

        android:textColor="@color/black"
        android:text="@string/login_button"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />


<!--    <TextView-->
<!--        android:id="@+id/textViewTitle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/registration_title"-->
<!--        android:textSize="34sp"-->
<!--        android:textStyle="bold"-->
<!--        android:textColor="@color/texinicio"-->
<!--        android:layout_marginTop="60dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->


<!--    <com.google.android.material.card.MaterialCardView-->
<!--        android:id="@+id/cardView"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:cardElevation="4dp"-->
<!--        app:cardCornerRadius="18dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/textViewTitle"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        android:theme="@style/Theme.MaterialComponents"-->
<!--        app:layout_constraintVertical_bias="0.5">-->

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="16dp">-->



<!--            <Button-->
<!--                android:id="@+id/btnLogin"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@id/editTextPassword"-->
<!--                android:backgroundTint="@color/Buton"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_marginStart="115dp"-->
<!--                android:text="@string/login_button" />-->

<!--        </RelativeLayout>-->
<!--    </com.google.android.material.card.MaterialCardView>-->

</androidx.constraintlayout.widget.ConstraintLayout>