<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".monitor.VerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/Edicion"
                android:textColor="@color/Buton"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/viewProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_Producto" />

            <EditText
                android:id="@+id/txtProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:labelFor="@+id/viewProducto"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/viewValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_Valor" />

            <EditText
                android:id="@+id/txtValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:labelFor="@+id/viewValor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/viewDetalles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_Detalles" />

            <EditText
                android:id="@+id/txtDetalles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:labelFor="@+id/viewDetalles"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/viewCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_Cantidad" />

            <EditText
                android:id="@+id/txtCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:labelFor="@+id/viewCantidad"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnGuarda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="6dp"
                android:text="@string/btn_guarda" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/Buton"
                android:clickable="true"
                app:maxImageSize="50dp"
                app:tint="#11FF00"
                android:src="@android:drawable/ic_menu_edit" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginRight="1dp"
                android:backgroundTint="@color/Buton"
                android:clickable="true"
                app:maxImageSize="50dp"
                app:tint="@color/colorNegativo"
                android:src="@android:drawable/ic_delete" />

        </LinearLayout>

    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/baseline_density_medium_24"
        app:backgroundTint="@color/Buton"
        app:maxImageSize="35dp"
        app:tint="@color/black" />
</RelativeLayout>
